initial team pages completed

--- a/media.html
+++ b/media.html
@@ -17,196 +17,79 @@
 
 
   <nav id="menu">
-    <h2 id="slideout-text">Menu</h2>
-    <hr>
-    <ul class="slideout-nav">
-      <li><a class="slideout-list-items" href="index.html">Home</a></li>
-      <li><a class="slideout-list-items" href="#news">News</a></li>
-      <li><a class="slideout-list-items" href="media.html">Media</a></li>
-      <li><a class="slideout-list-items" href="#contact">Contact</a></li>
-      <li><a class="slideout-list-items" href="#sponsors">Sponsors</a></li>
-      <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
-      <li><a class="slideout-list-items" href="#">Forum</a></li>
-      <li><a class="slideout-list-items" href="#">Store</a></li>
-    </ul>
+    <div class="menu-wrapper">
+      <h2 id="slideout-text">Menu</h2>
+      <hr>
+      <ul class="slideout-nav">
+        <li><a class="slideout-list-items" href="index.html">Home</a></li>
+        <li><a class="slideout-list-items" href="index.html#news">News</a></li>
+        <li><a class="slideout-list-items" href="index.html#sponsors">Sponsors</a></li>
+        <li><a class="slideout-list-items" href="index.html#teams">Hydracore Teams</a></li>
+        <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
+        <li><a class="slideout-list-items" href="media.html">Media</a></li>
+        <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
+        <li><a class="slideout-list-items" href="#">Forum</a></li>
+        <li><a class="slideout-list-items" href="#">Store</a></li>
+      </ul>
+      <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
+    </div>
   </nav>
 
   <main id="panel">
     <header>
       <button class="toggle-button">☰</button>
-      <img class="img--logo" src="images/logo.webp" alt="hydracore gaming logo">
-      <h2 class="headline--primary">The Next Evolution in eSports</h2>
+      <img class="img--logo" src="images/main-logo.png" alt="hydracore gaming logo">
+      <h2 class="headline--primary">Media and Videos</h2>
     </header>
     <div class="wrapper">
       <div class="grid__row" id="news">
         <div class="grid__col--12">
           <div class="card">
-            <h4 class="headline--secondary white">Upcoming Tournaments</h4>
+            <h4 class="headline--secondary white">Team Submitted Videos</h4>
 
-            <h3 class="headline--tertiary">Team Naga</h3>
+
             <ul class="list--primary">
-              <li>Go4R6 (PC) North America Cup #148
-                <p>Sunday, 13JAN19 @ 1700 EST</p>
+              <li class="highlight-videos"><iframe width="560" height="315"
+                  src="https://www.youtube.com/embed/m2XTqRLsFkw" frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
               </li>
-              <li>Go4R6 (PC) North America Cup #149
-                <p>Sunday, 20JAN19 @ 1700 EST</p>
+              <li class="highlight-videos"><iframe width="560" height="315"
+                  src="https://www.youtube.com/embed/stBbY2vqNw4" frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
+              </li>
+              <li class="highlight-videos"><iframe width="560" height="315"
+                  src="https://www.youtube.com/embed/pfT-yujmQBw" frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
               </li>
             </ul>
-            <h3 class="headline--tertiary">Team Fearless</h3>
-            <ul class="list--primary">
-              <li>Go4R6 (PC) North America Cup #153
-                <p>Sunday, 02FEB19 @ 1700 EST</p>
-              </li>
-              <li>Go4R6 (PC) North America Cup #149
-                <p>Sunday, 24FEB19 @ 1700 EST</p>
-              </li>
-              <h3 class="headline--secondary"><a href="#">View More</a></h3>
+
+            <h3 class="headline--secondary"><a href="#">View More</a></h3>
             </ul>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- The Modal -->
-    <!-- <div id="myModal" class="modal"> -->
-
-    <!-- Modal content -->
-    <!-- <div class="modal-content">
-        <div class="modal-header">
-          <span class="close">&times;</span>
-          <h2 class="white">My Resume</h2>
-        </div>
-        <div class="modal-body">
-          <img class="img--resume" src="images/resume.jpg" alt="resume">
-        </div>
-        <div class="modal-footer">
-          <h3 class="white">Front-End Web Developer</h3>
-        </div>
-      </div>
-
-    </div>
-
-    <div id="myModal-2" class="modal"> -->
-
-    <!-- Modal content -->
-    <!-- <div class="modal-content">
-        <div class="modal-header">
-          <span id="close-2" class="close">&times;</span>
-          <h2 class="white">What is a Web Developer?</h2>
-        </div>
-        <div class="modal-body">
-          <h3>An organism that converts caffeine into code</h3>
-        </div>
-        <div class="modal-footer">
-          <h3 class="white">{ / }</h3>
-        </div>
-      </div>
-
-    </div> -->
 
 
 
-    <div class="grid__row" id="sponsors">
 
-
-      <h2 class="headline--primary">Sponsors</h2>
-      <div class="grid__col--proj">
-        <ul>
-          <li class="sponsors"><a href="https://www.atmosrx.com/" target="_blank"><img class="img--frame"
-                src="images/logo-atmos-blue.svg" atl="atmosRX"></a></li>
-          <li class="sponsors"><a href="https://www.kinguin.net/" target="_blank"><img class="img--frame"
-                src="images/kinguin.png" atl="Kinguin"></a></li>
-          <li class="sponsors"><a href="https://www.htc.com/us/" target="_blank"><img class="img--frame"
-                src="images/HTC.svg" atl="HTC"></a></li>
-          <li class="sponsors"><a href="https://www.hidemyass.com/en-us/index" target="_blank"><img class="img--frame"
-                src="images/hidemyass.png" atl="HideMyAss VPN"></a></li>
-        </ul>
-      </div>
-
-    </div>
-
-
-    <div class="wrapper">
-      <h4 id="teams" class="headline--secondary white">Hydracore Teams</h4>
-      <div class="grid__col--skills">
-        <div class="skills--card">
-          <a href="naga.html"><img class="img--frame__teams" src="images/team-naga.png" alt="naga logo">
-          <h3 class="headline--tertiary">Team Naga</h3></a>
-          <hr>
-          <!-- <h5>Roster</h5>
-          <ul class="list--secondary">
-            <li>ZeeKiwi.HCG</li>
-            <li>Flexy.HCG</li>
-            <li>Grizzly.HCG</li>
-            <li>Kinky.HCG</li>
-            <li>Murky.HCG</li>
-            <li>Toasty.HCG</li>
-          </ul> -->
-        </div>
-        <div class="skills--card">
-            <a href="fearless.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Fearless</h3></a>
-          <hr>
-          <!-- <h5>Roster</h5>
-          <ul class="list--secondary">
-            <li>Logic.HCG</li>
-            <li>HoboJ3nk1ns.HCG</li>
-            <li>KiY.HCG</li>
-            <li>Torro.HCG</li>
-            <li>Lotus.HCG</li> -->
-        </div>
-        <div class="skills--card">
-            <a href="synergy.html"><img class="img--frame__teams" src="images/synergy-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Synergy</h3></a>
-          <hr>
-          <!-- <h5>Roster</h5>
-          <ul class="list--secondary">
-            <li>Azohar_.HCG</li>
-            <li>Benji.HCG</li>
-            <li>MrEagleEye.HCG</li>
-            <li>Pria.HCG</li>
-            <li>Scorpion.HCG</li>
-          </ul> -->
-        </div>
-        <div class="skills--card">
-            <a href="tranquil.html"><img class="img--frame__teams" src="images/team-tranquil.png" alt="tranquil logo">
-          <h3 class="headline--tertiary">Team Tranquil</h3></a>
-          <hr>
-          <!-- <h5>Roster</h5>
-          <ul class="list--secondary">
-            <li>Ainsley.HCG</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li> -->
-          <!-- </ul> -->
-        </div>
-        <div class="skills--card">
-            <a href="smash.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Smash</h3></a>
-          <hr>
-          <!-- <h5>Roster</h5>
-          <ul class="list--secondary">
-            <li>Playz.HCG</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul> -->
-        </div>
-      </div>
-
-    </div>
 
 
     <h4 class="headline--secondary" id="contact">Contact</h4>
     <p>If you're interested in joining a team or want more information about the orginazation, we'd love to hear from
       you!</p>
     <ul class="contact-info">
-      <li><a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="contact-icons" src="images/discord-icon.png"></a></li>
-      <li><a href="mailto:mark.young9987@icloud.com" target="_blank"><img class="contact-icons" src="images/email-icon.png"></a>
+      <li><a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="contact-icons"
+            src="images/discord-icon.png"></a></li>
+      <li><a href="mailto:HydraCoreGaming@gmail.com" target="_blank"><img class="contact-icons"
+            src="images/email-icon.png"></a>
       </li>
-      <li><a href="https://github.com/Mark-Y9987" target="_blank"><img class="contact-icons" src="images/twitter-icon.png"></a></li>
+      <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
+            src="images/twitter-icon.png"></a></li>
     </ul>
     </div>
     <hr>
@@ -250,21 +133,21 @@
     });
 
     function close(eve) {
-  eve.preventDefault();
-  slideout.close();
-}
+      eve.preventDefault();
+      slideout.close();
+    }
 
-slideout
-  .on('beforeopen', function() {
-    this.panel.classList.add('panel-open');
-  })
-  .on('open', function() {
-    this.panel.addEventListener('click', close);
-  })
-  .on('beforeclose', function() {
-    this.panel.classList.remove('panel-open');
-    this.panel.removeEventListener('click', close);
-  });
+    slideout
+      .on('beforeopen', function () {
+        this.panel.classList.add('panel-open');
+      })
+      .on('open', function () {
+        this.panel.addEventListener('click', close);
+      })
+      .on('beforeclose', function () {
+        this.panel.classList.remove('panel-open');
+        this.panel.removeEventListener('click', close);
+      });
   </script>
 
 </body>
