--- a/synergy.html
+++ b/synergy.html
@@ -38,43 +38,43 @@
     <main id="panel">
         <header>
             <button class="toggle-button">☰</button>
-            <img class="img--logo" src="images/main-logo.png" alt="hydracore gaming logo">
-            <h2 class="headline--primary">Team Fearless</h2>
+            <img class="img--logo" src="images/synergy-logo.png" alt="hydracore gaming logo">
+            <h2 class="headline--primary">Team Synergy</h2>
         </header>
         <div class="wrapper">
             <div class="grid__col--skills">
                 <div class="skills--card" id="myBtn">
-                    <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/logic.png"
+                    <a href="#ex1" rel="modal:open"><img class="img--frame__roster" src="images/azohar.png"
                             alt="naga logo">
-                        <h3 class="headline--tertiary">Logic.HCG</h3>
+                        <h3 class="headline--tertiary">Azohar_.HCG</h3>
                     </a>
                     <hr>
                 </div>
                 <div class="skills--card">
-                    <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/hobo.png"
+                    <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/benji.png"
                             alt="main logo">
-                        <h3 class="headline--tertiary">HoboJ3nk1ns.HCG</h3>
+                        <h3 class="headline--tertiary">Benji.HCG</h3>
                     </a>
                     <hr>
                 </div>
                 <div class="skills--card">
-                    <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/kiy.png"
+                    <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/pria.png"
                             alt="main logo">
-                        <h3 class="headline--tertiary">Kiy.HCG</h3>
+                        <h3 class="headline--tertiary">Pria.HCG</h3>
                     </a>
                     <hr>
                 </div>
                 <div class="skills--card">
-                    <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/torro.png"
+                    <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/scorpion.png"
                             alt="tranquil logo">
-                        <h3 class="headline--tertiary">Torro.HCG</h3>
+                        <h3 class="headline--tertiary">Scorpion.HCG</h3>
                     </a>
                     <hr>
                 </div>
                 <div class="skills--card">
-                    <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/lotus.png"
+                    <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/eagle.png"
                             alt="main logo">
-                        <h3 class="headline--tertiary">Lotus.HCG</h3>
+                        <h3 class="headline--tertiary">MrEagleEye.HCG</h3>
                     </a>
                     <hr>
                 </div>
@@ -84,50 +84,46 @@
         <!-- Modal Content -->
 
         <div id="ex1" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
-            <p>Im David Aka, The Captain/The Entry Fragger/Roamer for the Fearless Hydracore team. Ive been with the
-                team for nine months and am grinding all day every day. I love playing siege and have been playing for a
-                year. I love the patriots and can be a lil dum. He hopes to one day go pro-league and intends on his
-                team going CL within the next year.</p>
+            <img class="modal-logo" src="images/azohar_logo.jpg">
+            <p>Azohar_.HCG is a lifelong gamer and ignited his passion for gaming with Super Mario Bros back in 1987
+                and hasn't looked back since. He typically goes by "Azo, Azohar, or Az". Azohar holds a phenomenal team
+                dynamic and maintains an impressive ability to flex between multiple roles on Team Synergy.</p>
             <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
         <div id="ex2" class="modal">
-            <img class="modal-logo" src="images/hobo_logo.png">
-            <p>Hoboj3k1ns.Hydra is a lifelong gamer and ignited his passion for gaming with MidEvil back in 1998. He
-                typically goes by "hobo". He worked as an IT tech but now works in a electronics store and his dream
-                ever since he was a kid was to become a pro gamer. Hobo has been misidentified as Jesus, the Messiah of
-                the popular religion "Christianity", and sometimes a homeless hippie.
+            <img class="modal-logo" src="images/placeholder.png">
+            <p>Benji.HCG is a hardcore siege player and devotes a minimum of 3 hours daily to play before he goes to
+                work as an aircraft mechanic for the US Air Force. He is a flex player but enjoys anchoring or support
+                play the most. I can see hydracore making it in pro league and dominating.
             </p>
             <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
         <div id="ex3" class="modal">
             <img class="modal-logo" src="images/placeholder.png">
-            <p>KiY Otherwise known as "Kyle" started siege last year and has been on a non-stop grind to get better. KiY
-                started gaming on ps3 and quit for 2 years. After playing Pubg on pc for 1 year, His friend (Torro.HCG)
-                dragged him into siege during a free weekend and taught Kyle how to play. Kyle started at the end of
-                white noise and has improved greatly and hopes to play pro someday.
+            <p>I am an accomplished musician, joining symphonies starting in 8th grade. I’ve been playing video games
+                for as long as I can remember, starting out with the original Halo’s then into Overwatch to Counter
+                Strike and eventually onto Siege. Synergy has been a way for me to advance my skills both as a team mate
+                and a player. Can’t wait to see what this season has in store for us.
             </p>
             <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
         <div id="ex4" class="modal">
             <img class="modal-logo" src="images/placeholder.png">
-            <p>Hey im Torro, I've played R6 for 2 years now. Started on PS4 and now play PC for HydraCore.I used to be
-                really toxic but since joining a team i've learned how to play as a team. Played games since i was 6 and
-                ever since have never gave it up. </p>
+            <p>Scorpion.HCG is a 16 year old boy who loves sports, hunting, and fishing. I like to make jokes and have
+                a good time, but when its time to get serious, I do it. My real name is Rudy (Scorpion). I also like to
+                learn new things, and expand my knowledge. I hope I get to meet you and have a fantastic rest of your
+                day!</p>
             <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
         <div id="ex5" class="modal">
             <img class="modal-logo" src="images/placeholder.png">
-            <p>Hi, My name is Samuel “Lotus” Ellisor, and i have been playing game for as long as i can remember. I had
-                originally started out with Games such as Counter Strike Source and Halo to the abundance of games i
-                play now. I hope to go Pro in Rainbow at some point but before that i have to get better where i’m
-                lacking. There is no better fun than winning in my book and I intend to do so. I would say i’m the least
-                experienced in this org but, i’m no stranger to teamplay and i’m here to show my dominance. See you guys
-                in the games!</p>
+            <p>MrEagleEye.HCG Is a 21 year old Collision repairman and auto painter, Practices archery for fun and is a
+                proud
+                advocate to suicide prevention and help methods. A lifetime gamer, and a huge batman fan.</p>
             <!-- <a href="#" rel="modal:close">Close</a> -->
         </div>
 
