--- a/naga.html
+++ b/naga.html
@@ -50,25 +50,25 @@
           <hr>
         </div>
         <div class="skills--card">
-          <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/flexy.jpg" alt="main logo">
+          <a href="#ex2" rel="modal:open"><img class="img--frame__roster" src="images/flexy.png" alt="main logo">
             <h3 class="headline--tertiary">Flexy.HCG</h3>
           </a>
           <hr>
         </div>
         <div class="skills--card">
-          <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/mrv.jpg" alt="main logo">
+          <a href="#ex3" rel="modal:open"><img class="img--frame__roster" src="images/mrv.png" alt="main logo">
             <h3 class="headline--tertiary">MRV2.HCG</h3>
           </a>
           <hr>
         </div>
         <div class="skills--card">
-          <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/kinky.jpg" alt="tranquil logo">
+          <a href="#ex4" rel="modal:open"><img class="img--frame__roster" src="images/kinky.png" alt="tranquil logo">
             <h3 class="headline--tertiary">Kinky.HCG</h3>
           </a>
           <hr>
         </div>
         <div class="skills--card">
-          <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/murky.jpg" alt="main logo">
+          <a href="#ex5" rel="modal:open"><img class="img--frame__roster" src="images/murky.png" alt="main logo">
             <h3 class="headline--tertiary">Murky.HCG</h3>
           </a>
           <hr>
@@ -96,7 +96,7 @@
     </div>
 
     <div id="ex3" class="modal">
-      <img class="modal-logo" src="images/flexy_logo.png">
+      <img class="modal-logo" src="images/placeholder.png">
       <p>MRV2.HCG is a 21 year old gamer who also loves to play sports as well. He is one of two resident Canadian HCG
         members and has high aspirations within the competitive Siege scene. Although new to the game, he has shown
         great promise in ability to drop high kill count and an absolutely amazing support capability. He is excited for
@@ -106,7 +106,7 @@
     </div>
 
     <div id="ex4" class="modal">
-      <img class="modal-logo" src="images/flexy_logo.png">
+      <img class="modal-logo" src="images/placeholder.png">
       <p>Kinky.HCG is a goofy, fun, and dedicated player. Competed in R6S for 3 years and has been playing since beta.
         Switched to PC after 2 years and console play. Randy "Kinky" Woodward constantly practices and aims fo be the
         best player he can be . He is an Agent of Impact for Hope For The Day. It's Ok to not be ok <3. </p> <!-- <a
@@ -114,7 +114,7 @@
     </div>
 
     <div id="ex5" class="modal">
-      <img class="modal-logo" src="images/flexy_logo.png">
+      <img class="modal-logo" src="images/placeholder.png">
       <p>Murky is a very goofy and fun to be around 24 year old that has had a love and passion for Rainbow Six Siege
         ever since day it was annouced at E3. He first started to play the game on console and the game suckered him
         into building his own PC. Dalton ''Murky" Adams has always wanted to play the game and learn something new every
