initial commit of hydracore store page

--- a/synergy.html
+++ b/synergy.html
@@ -29,7 +29,7 @@
                 <li><a class="slideout-list-items" href="media.html">Media</a></li>
                 <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
                 <li><a class="slideout-list-items" href="#">Forum</a></li>
-                <li><a class="slideout-list-items" href="#">Store</a></li>
+                <li><a class="slideout-list-items" href="store.html">Store</a></li>
             </ul>
             <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
         </div>
@@ -111,7 +111,7 @@
         </div>
 
         <div id="ex4" class="modal">
-            <img class="modal-logo" src="images/placeholder.png">
+            <img class="modal-logo" src="images/scorpion_logo.jpg">
             <p>Scorpion.HCG is a 16 year old boy who loves sports, hunting, and fishing. I like to make jokes and have
                 a good time, but when its time to get serious, I do it. My real name is Rudy (Scorpion). I also like to
                 learn new things, and expand my knowledge. I hope I get to meet you and have a fantastic rest of your
