--- a/fearless.html
+++ b/fearless.html
@@ -29,7 +29,7 @@
                 <li><a class="slideout-list-items" href="media.html">Media</a></li>
                 <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
                 <li><a class="slideout-list-items" href="#">Forum</a></li>
-                <li><a class="slideout-list-items" href="#">Store</a></li>
+                <li><a class="slideout-list-items" href="store.html">Store</a></li>
             </ul>
             <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
         </div>
