added about section and created sponsors page

--- a/fearless.html
+++ b/fearless.html
@@ -23,10 +23,11 @@
             <ul class="slideout-nav">
                 <li><a class="slideout-list-items" href="index.html">Home</a></li>
                 <li><a class="slideout-list-items" href="index.html#news">News</a></li>
-                <li><a class="slideout-list-items" href="index.html#sponsors">Sponsors</a></li>
+                <li><a class="slideout-list-items" href="index.html#about">About</a></li>
                 <li><a class="slideout-list-items" href="index.html#teams">Hydracore Teams</a></li>
                 <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
                 <li><a class="slideout-list-items" href="media.html">Media</a></li>
+                <li><a class="slideout-list-items" href="sponsors.html">Sponsors</a></li>
                 <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
                 <li><a class="slideout-list-items" href="#">Forum</a></li>
                 <li><a class="slideout-list-items" href="store.html">Store</a></li>
@@ -128,7 +129,14 @@
                 lacking. There is no better fun than winning in my book and I intend to do so. I would say i’m the least
                 experienced in this org but, i’m no stranger to teamplay and i’m here to show my dominance. See you guys
                 in the games!</p>
-            <!-- <a href="#" rel="modal:close">Close</a> -->
+            <ul class="contact-info">
+                <!-- <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
+                            src="images/twitter-icon.png"></a></li> -->
+                <li><a href="https://www.twitch.tv/d_redeemr" target="_blank"><img class="contact-icons"
+                            src="images/twitch-icon.png"></a></li>
+                <li><a href="https://www.youtube.com/channel/UCDF2kJjVThgfjjKqNaxGQeQ?view_as=subscriber"
+                        target="_blank"><img class="contact-icons" src="images/youtube-icon.png"></a></li>
+            </ul>
         </div>
 
 
