--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
       <ul class="slideout-nav">
         <li><a class="slideout-list-items" href="index.html">Home</a></li>
         <li><a class="slideout-list-items" href="index.html#news">News</a></li>
-        <li><a class="slideout-list-items" href="index.html#sponsors">Sponsors</a></li>
+        <li><a class="slideout-list-items" href="index.html#about">About</a></li>
         <li><a class="slideout-list-items" href="index.html#teams">Hydracore Teams</a></li>
         <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
         <li><a class="slideout-list-items" href="media.html">Media</a></li>
+        <li><a class="slideout-list-items" href="sponsors.html">Sponsors</a></li>
         <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
         <li><a class="slideout-list-items" href="#">Forum</a></li>
         <li><a class="slideout-list-items" href="store.html">Store</a></li>
@@ -75,21 +76,17 @@
 
 
 
-    <div class="grid__row" id="sponsors">
+    <div class="grid__row" id="about">
 
 
-      <h2 class="headline--primary">Sponsors</h2>
+      <h2 class="headline--primary">About</h2>
       <div class="grid__col--proj">
-        <ul>
-          <li class="sponsors"><a href="https://www.atmosrx.com/" target="_blank"><img class="img--frame"
-                src="images/logo-atmos-blue.svg" atl="atmosRX"></a></li>
-          <li class="sponsors"><a href="https://www.kinguin.net/" target="_blank"><img class="img--frame"
-                src="images/kinguin.png" atl="Kinguin"></a></li>
-          <li class="sponsors"><a href="https://www.htc.com/us/" target="_blank"><img class="img--frame"
-                src="images/HTC.svg" atl="HTC"></a></li>
-          <li class="sponsors"><a href="https://www.hidemyass.com/en-us/index" target="_blank"><img class="img--frame"
-                src="images/hidemyass.png" atl="HideMyAss VPN"></a></li>
-        </ul>
+        <img class="img--banner" src="images/siege-background.png">
+        <p>Hydracore Gaming was founded by Jamie Zudonyi, aka "ZeeKiwi" in 2017. The orginazation has continued to grow
+          over the last few years under Jamie's professional leadership. With Jamie's charismatic personality and
+          steadfast dedication to the team and community, Hydracore has seen an explosion of followers in a short period
+          of time. In the coming months and years, Hydracore gaming aims to become a contender in the pro league arena.
+        </p>
       </div>
 
     </div>
