--- a/naga.html
+++ b/naga.html
@@ -23,10 +23,11 @@
       <ul class="slideout-nav">
         <li><a class="slideout-list-items" href="index.html">Home</a></li>
         <li><a class="slideout-list-items" href="index.html#news">News</a></li>
-        <li><a class="slideout-list-items" href="index.html#sponsors">Sponsors</a></li>
+        <li><a class="slideout-list-items" href="index.html#about">About</a></li>
         <li><a class="slideout-list-items" href="index.html#teams">Hydracore Teams</a></li>
         <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
         <li><a class="slideout-list-items" href="media.html">Media</a></li>
+        <li><a class="slideout-list-items" href="sponsors.html">Sponsors</a></li>
         <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
         <li><a class="slideout-list-items" href="#">Forum</a></li>
         <li><a class="slideout-list-items" href="store.html">Store</a></li>
