--- a/sponsors.html
+++ b/sponsors.html
@@ -40,86 +40,30 @@
         <header>
             <button class="toggle-button">☰</button>
             <img class="img--logo" src="images/main-logo.png" alt="hydracore gaming logo">
-            <h2 class="headline--primary">Hydracore Store</h2>
+            <h2 class="headline--primary">The Next Evolution in eSports</h2>
         </header>
-
-
         <div class="wrapper">
-            <h4 id="teams" class="headline--secondary white">Available Items</h4>
-            <div class="grid__col--skills">
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=597&cid=102534&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/beach-towel.png" alt="naga logo">
-                        <h3 class="headline--tertiary">Beach Towel</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=658&cid=102950&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/coffee-mug.png" alt="main logo">
-                        <h3 class="headline--tertiary">Coffee Mug</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=636&cid=102607&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/black-socks.png" alt="main logo">
-                        <h3 class="headline--tertiary">Black Socks</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=706&cid=103046&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/white-socks.png" alt="tranquil logo">
-                        <h3 class="headline--tertiary">White Socks</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=633&cid=102591&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/iphone-case.png" alt="main logo">
-                        <h3 class="headline--tertiary">iPhone Case</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=704&cid=103084&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/samsung-case.png" alt="main logo">
-                        <h3 class="headline--tertiary">Samsung Case</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=641&cid=102637&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/leggings.png" alt="main logo">
-                        <h3 class="headline--tertiary">Leggings</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=585&cid=102425&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/pillow.png" alt="main logo">
-                        <h3 class="headline--tertiary">Indoor Pillow</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=624&cid=102380&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/poster.png" alt="main logo">
-                        <h3 class="headline--tertiary">Poster</h3>
-                    </a>
-                    <hr>
-                </div>
-                <div class="skills--card__store">
-                    <a href="https://teespring.com/hydracore-gaming-store?bf16d5d21b#pid=794&cid=103544&sid=front"
-                        target="_blank"><img class="img--frame__store" src="images/sticker.png" alt="main logo">
-                        <h3 class="headline--tertiary">Die-cut Sticker</h3>
-                    </a>
-                    <hr>
-                </div>
-            </div>
+            <div class="grid__row" id="sponsors">
 
+
+                <h2 class="headline--secondary white">Sponsors</h2>
+                <div class="grid__col--proj">
+                    <ul>
+                        <li class="sponsors"><a href="https://www.atmosrx.com/" target="_blank"><img class="img--frame"
+                                    src="images/logo-atmos-blue.svg" atl="atmosRX"></a></li>
+                        <li class="sponsors"><a href="https://www.kinguin.net/" target="_blank"><img class="img--frame"
+                                    src="images/kinguin.png" atl="Kinguin"></a></li>
+                        <li class="sponsors"><a href="https://www.htc.com/us/" target="_blank"><img class="img--frame"
+                                    src="images/HTC.svg" atl="HTC"></a></li>
+                        <li class="sponsors"><a href="https://www.hidemyass.com/en-us/index" target="_blank"><img
+                                    class="img--frame" src="images/hidemyass.png" atl="HideMyAss VPN"></a></li>
+                    </ul>
+                </div>
+
+            </div>
         </div>
+
+
 
         <h4 class="headline--secondary" id="contact">Contact</h4>
         <p>If you're interested in joining a team or want more information about the orginazation, we'd love to hear
