--- a/smash.html
+++ b/smash.html
@@ -28,8 +28,8 @@
                 <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
                 <li><a class="slideout-list-items" href="media.html">Media</a></li>
                 <li><a class="slideout-list-items" href="sponsors.html">Sponsors</a></li>
-                <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
-                <li><a class="slideout-list-items" href="#">Forum</a></li>
+                <!-- <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
+                <li><a class="slideout-list-items" href="#">Forum</a></li> -->
                 <li><a class="slideout-list-items" href="store.html">Store</a></li>
             </ul>
             <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
